<resources>
    <string name="app_name">My Movies</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="avengers_title">Avengers:\nEnd Game</string>
    <string name="thirteen_plus">13+</string>
    <string name="kinds">Action, Adventure, Fantasy</string>
    <string name="reviews">125 Reviews</string>
    <string name="content_title">Storyline</string>
    <string name="content_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the universe.</string>
    <string name="actorsTitle">Cast</string>
    <string name="actor1">Robert Downey Jr.</string>
    <string name="actor2">Chris Evans</string>
    <string name="actor3">Mark Ruffalo</string>
    <string name="actor4">Chris Hemsworth</string>
</resources>